turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def brosse(couleur:Color)
{
	setCouleurBrosse(couleur); baisseBrosse(); leveBrosse()
}

def step(rule:Array[Char], colors:Array[Color]) 
{
	var pos = 0
	
	for(i <- 0 to colors.length-1)
	{
		if(colors(i)==getCouleurSol())
			pos=i
	}
	
	rule(pos) match
	{
		case 'L' => if(pos!=colors.length-1) {brosse(colors(pos+1)); gauche(); avance()}
				  else {brosse(colors(0)); gauche(); avance()}
		case 'R' => if(pos!=colors.length-1) brosse(colors(pos+1)); droite(); avance();
				  else brosse(colors(0)); droite(); avance()
	}
}

